--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,9 @@
     "version": "1.1.0",
     "permissions": [
         "storage",
-        "tabs"
+        "tabs",
+        "sessions",
+        "tabHide"
     ],
     "background": {
         "scripts": [
